# ai-debate-arena

./: .gitignore  AGENTS.md  AI Debate Arena — PRD.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run_debate.py  run_server.py  start-backend.bat  start-frontend.bat
debate/: __init__.py  cli.py  config.py  llm.py  models.py
debate/agents/: __init__.py  base.py  coach.py  debater.py  judge.py  summarizer.py
debate/engine/: __init__.py  arena.py  event_log.py  mode_1v1.py  mode_4v4.py
debate/output/: __init__.py  exporter.py  formatter.py
debate/prompts/: __init__.py  templates.py
debate/research/: __init__.py  reader.py  search.py  types.py
debate/server/: app.py  history.py  ws.py
docs/: README.md  architecture.md  testing.md
examples/: config.yaml  sample_debate.json
tests/: test_agents.py  test_config.py  test_deep_research_smoke.py  test_engine.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: BattleView.tsx  BattleView4v4.tsx  CenterStage.tsx  HistoryList.tsx  JudgingPanel.tsx  Layout.tsx  ScoreBoard.tsx  SetupPanel.tsx  SpeechBubble.tsx  SummaryPanel.tsx  TeamChannel.tsx  Timeline.tsx
web/src/hooks/: useDebateSocket.ts
web/src/lib/: protocol.ts
web/src/store/: debateStore.ts
web/src/styles/: tokens.css
